syntax = "proto3";

option csharp_namespace = "Server.Controllers.Grpc";

package curriculum_vitae;

import "google/protobuf/timestamp.proto";

// The service for managing curriculum vitae (CV) operations.
service CurriculumVitaeService {
  // // Creates a new CV with the provided details.
  rpc CreateCurriculumVitae (CreateCurriculumVitaeRequest) returns (CreateCurriculumVitaeResponse);
  // Retrieves a CV based on the provided ID.
  rpc GetCurriculumVitae (GetCurriculumVitaeRequest) returns (GetCurriculumVitaeResponse);
  // Updates an existing CV with new information, partially modifying fields.
  rpc PatchCurriculumVitae (PatchCurriculumVitaeRequest) returns (PatchCurriculumVitaeResponse);
}

// The request message for creating a new CV.
message CreateCurriculumVitaeRequest {
  // A description of the CV.
  string description = 1;
  // Automatically received the default CV if the customer does not specify an ID.
  bool isDefault = 2;
}

// The response message for creating a new CV.
message CreateCurriculumVitaeResponse {
  // The unique identifier of the CV and meta data.
  string id = 1;
  // The number of revisions made to the CV (starts at 0).
  int32 revisionCounter = 2;
}

// The request message for retrieving a CV.
message GetCurriculumVitaeRequest {
  // The unique identifier for the CV and meta data being requested.
  string id = 1;
}

// The response message containing CV details.
message GetCurriculumVitaeResponse {
  // The unique identifier of the CV and meta data.
  string id = 1;
  // A description of the CV.
  string description = 2;
  // Automatically received the default CV if the customer does not specify an ID.
  bool isDefault = 3;
  // The detailed curriculum vitae data.
  CurriculumVitae curriculumVitae = 4;
  // The timestamp when the CV was created.
  google.protobuf.Timestamp createdAt = 5;
  // The timestamp when the CV was last modified.
  google.protobuf.Timestamp modifiedAt = 6;
  // The current revision number of the CV.
  int32 revisionCounter = 7;
}

// The request message for updating (patching) a CV.
message PatchCurriculumVitaeRequest {
  // The unique identifier of the CV and meta data to update.
  string id = 1;
  // A description of the CV.
  string description = 2;
  // Automatically received the default CV if the customer does not specify an ID.
  bool isDefault = 3;
  // The revision number of the CV being updated (for concurrency checks).
  int32 revisionCounter = 4;
}

// The response message for updating a CV.
message PatchCurriculumVitaeResponse {
  // The unique identifier of the updated CV.
  string id = 1;
  // The new revision number of the CV after the update.
  int32 revisionCounter = 2;
}

// The curriculum vitae message containing all relevant details.
message CurriculumVitae {
  // The unique identifier of the CV.
  string id = 1;
  // The full name of the individual.
  string fullName = 2;
  // The professional title or designation of the individual (e.g., Software Engineer, Project Manager).
  string title = 3;
  // The gender of the individual (e.g., Male, Female, Non-binary).
  string gender = 4;
  // Specifies the type of driver's license the individual holds (e.g., Class A, Class B, or specific regional categories).
  string driverLicence = 5;
  // A brief personal or professional summary about the individual.
  string description = 6;
  // A link or encoded data representing the individual's profile photo.
  string profilePhoto = 7;
  // A list of work experiences, detailing previous jobs or professional roles held by the individual.
  repeated WorkExperience workExperiences = 8;
  // A list of educational achievements, such as degrees or certifications from academic institutions.
  repeated Education educations = 9;
  // A list of certifications earned by the individual, demonstrating specialized skills or qualifications.
  repeated Certification certifications = 10;
  // A list of skills highlighting the individual's areas of expertise or proficiency.
  repeated Skill skills = 11;
  // A list of languages the individual is proficient in, along with fluency levels.
  repeated Language languages = 12;
  // A list of interests or hobbies that reflect the individual's personal or professional passions.
  repeated Interest interests = 13;
  // A collection of relevant links, such as personal websites, LinkedIn profiles, or portfolios.
  repeated Link links = 14;
}

// A message representing a work experience.
message WorkExperience {
  // The unique identifier of the work experience.
  string id = 1;
  // The title or position held in the job.
  string title = 2;
  // The logo or emblem associated with the workplace.
  string logoImage = 3;
  // The start date of the work experience.
  google.protobuf.Timestamp start = 4;
  // The end date of the work experience (optional, null for ongoing).
  optional google.protobuf.Timestamp end = 5;
  // A description of the role and responsibilities.
  string description = 6;
  // A list of technologies or tools used in the role.
  repeated string technologiesUsed = 7;
}

// A message representing an educational achievement.
message Education {
  // The unique identifier of the education.
  string id = 1;
  // The title of the degree or certification earned.
  string title = 2;
  // The name of the school or institution.
  string school = 3;
  // The starting year of the education.
  string startYear = 4;
  // The completion year of the education.
  string endYear = 5;
}

// A message representing a professional certification.
message Certification {
  // The unique identifier of the certification.
  string id = 1;
  // The title of the certification.
  string title = 2;
  // The company or organization that issued the certification.
  string company = 3;
  // The timestamp when the certification was received.
  google.protobuf.Timestamp ReceivedAt = 4;
  // A link to the certification or relevant details.
  Link location = 5;
}

// A message representing a skill.
message Skill {
  // The unique identifier of the skill.
  string id = 1;
  // The name or title of the skill.
  string title = 2;
  // The type or category of the skill (e.g., technical, soft).
  string type = 3;
  // The proficiency level of the skill.
  string level = 4;
}

// A message representing a language proficiency.
message Language {
  // The unique identifier of the language.
  string id = 1;
  // The name of the language.
  string name = 2;
  // The proficiency level in the language.
  string level = 3;
}

// A message representing an interest or hobby.
message Interest {
  // The unique identifier of the interest.
  string id = 1;
  // The name of the interest or hobby.
  string name = 2;
}

// A message representing a url link
message Link {
  // The unique identifier of the link.
  string id = 1;
  // A description of the link or its purpose.
  string description = 2;
  // The URL of the link.
  string url = 3;
}